--- a/content/posts/自我成长/效率/微习惯.md
+++ b/content/posts/自我成长/效率/微习惯.md
@@ -5,9 +5,9 @@ date: 2025-10-20T01:04:26+08:00
 type: posts
 slug: cbb9bd44
 categories: 
-  - 分类
+  - 个人成长
 collections: 
-  - 合集
+  - 习惯养成
 draft: false   
 ---
 
